change label display

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <div class="header" style="background-image: url('./assets/images/header-3.jpg');">
     <div class="container">
       <div class="header-content">
-        <h5>Round Beauty Center</h5>
+        <h5>Rand Beauty Center</h5>
       </div>
     </div>
   </div>
@@ -63,7 +63,6 @@
                 <div class="card-img" style="background-image: url('./assets/images/img-1.jpg');">
                 </div>
                 <h5 class="card-title">Hair Care</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, ab!</p>
                 <div class="cheack-mark">
                   <span></span>
                 </div>
@@ -80,7 +79,6 @@
                 <div class="card-img" style="background-image: url('./assets/images/img-2.jpg');">
                 </div>
                 <h5 class="card-title">Facial Treatments</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, ab!</p>
                 <div class="cheack-mark">
                   <span></span>
                 </div>
@@ -97,7 +95,6 @@
                 <div class="card-img" style="background-image: url('./assets/images/img-3.jpg');">
                 </div>
                 <h5 class="card-title">Advanced Facial Treatments</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, ab!</p>
                 <div class="cheack-mark">
                   <span></span>
                 </div>
@@ -114,7 +111,6 @@
                 <div class="card-img" style="background-image: url('./assets/images/img-4.jpg');">
                 </div>
                 <h5 class="card-title">Anti-Aging Treatments</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, ab!</p>
                 <div class="cheack-mark">
                   <span></span>
                 </div>
@@ -131,7 +127,6 @@
                 <div class="card-img" style="background-image: url('./assets/images/img-5.jpg');">
                 </div>
                 <h5 class="card-title">Eye Treatment Center</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, ab!</p>
                 <div class="cheack-mark">
                   <span></span>
                 </div>
@@ -148,7 +143,6 @@
                 <div class="card-img" style="background-image: url('./assets/images/img-6.jpg');">
                 </div>
                 <h5 class="card-title">Body Massage</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, ab!</p>
                 <div class="cheack-mark">
                   <span></span>
                 </div>
@@ -165,7 +159,6 @@
                 <div class="card-img" style="background-image: url('./assets/images/img-7.jpg');">
                 </div>
                 <h5 class="card-title">Makeup Services</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, ab!</p>
                 <div class="cheack-mark">
                   <span></span>
                 </div>
@@ -182,7 +175,6 @@
                 <div class="card-img" style="background-image: url('./assets/images/img-8.jpg');">
                 </div>
                 <h5 class="card-title">Waxing</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, ab!</p>
                 <div class="cheack-mark">
                   <span></span>
                 </div>
@@ -199,7 +191,6 @@
                 <div class="card-img" style="background-image: url('./assets/images/img-9.jpg');">
                 </div>
                 <h5 class="card-title">Nail Care</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, ab!</p>
                 <div class="cheack-mark">
                   <span></span>
                 </div>
@@ -216,7 +207,6 @@
                 <div class="card-img" style="background-image: url('./assets/images/img-10.jpg');">
                 </div>
                 <h5 class="card-title">Body Shaping & Fitness</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, ab!</p>
                 <div class="cheack-mark">
                   <span></span>
                 </div>
