change copy right

--- a/index.html
+++ b/index.html
@@ -239,11 +239,8 @@
       </div>
       <div class="copy">
         <div class="row">
-          <div class="col-sm-12 col-md-6 col-lg-6">
-            <h5 class="text-left">Copyright © 2021</h5>
-          </div>
-          <div class="col-sm-12 col-md-6 col-lg-6">
-            <h5 class="text-right">Developed by <a href="mailto:omar.ali.alasmar@gmail.com">Omar ali</a></h5>
+          <div class="col-sm-12 col-md-6 col-lg-12">
+            <h5 class="text-center">Copyright © 2021 rand beauty center</h5>
           </div>
         </div>
       </div>
